--- a/containers/kubernetes-openshift/samples/pvc_example.yml
+++ b/containers/kubernetes-openshift/samples/pvc_example.yml
@@ -2,11 +2,11 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: pvc-hpe
+  name: pvc-nginx
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 16Gi
-  storageClassName: sc-hpe
+      storage: 10Gi
+  storageClassName: sc-gold
